--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -6,25 +6,47 @@
   background-color: #333333;
 }
 
+
 .ul_navbar li {
   float: left;
+  padding-left: 5px;
 }
-img {
+
+
+.ul_navbar img {
+  /* padding-right: 5px; */
+  width: 80px;
+  height: 60px;
+  border-radius: 5px;
+
+
+}
+
+
+.ul_navbar img:hover {
+  box-shadow: 0 0 30px 5px rgba(0, 142, 236, 0.815);
+  -webkit-transition: all 0.15s ease-out;
+  -moz-transition: all 0.15s ease-out;
+  transition: all 0.15s ease-out;
   /* padding-right: 5px; */
   width: 80px;
   height: 60px;
   border-radius: 5px;
 }
+
 .link {
   display: block;
   color: white;
   text-align: center;
   padding: 22px;
   text-decoration: none;
+  height: 200px;
   border-radius: 5px;
 }
+
 .active_link {
   display: block;
+  height: 200px;
   color: white;
   text-align: center;
   padding: 22px;
@@ -32,11 +54,31 @@ img {
   border-radius: 5px;
   background-color: blue;
 }
+
 .active_img img {
   width: 80px;
   height: 60px;
   border-radius: 5px;
 }
+
 .link a:hover {
   background-color: #111111;
 }
+
+/* @media (max-width: 500px) and (orientation: portrait) {
+  .ul_navbar {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #9b1a1a;
+  }
+
+  .ul_navbar img {
+    height: 20px;
+    width: 20px;
+    border-radius: 5px;
+
+
+  }
+} */
